@@ -1,6 +1,6 @@
 {
-  "timestamp" : "2022-04-17T08:09:41Z",
-  "count" : 15,
+  "timestamp" : "2022-04-30T00:41:28Z",
+  "count" : 13,
   "count_minmax" : [ 13, 15 ],
   "count_prev_day_inc" : 13,
   "count_prev_day_dec" : 22,
