@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-04-29T16:10:04Z",
+  "timestamp" : "2022-04-30T00:41:28Z",
   "count_outdated" : 1004,
   "uniques_outdated" : 60,
-  "count" : 1050,
+  "count" : 1048,
   "uniques" : 67,
   "views" : [
     {
       "timestamp": "2022-04-16T00:00:00Z",
-      "count": 15,
+      "count": 13,
       "count_minmax": [ 13, 15 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
