@@ -1,10 +1,10 @@
 {
-  "count": 46,
+  "count": 44,
   "uniques": 2,
   "views": [
     {
       "timestamp": "2022-04-16T00:00:00Z",
-      "count": 15,
+      "count": 13,
       "uniques": 1
     },
     {
